@@ -8,5 +8,3 @@ export C-Cat to mm format http://freemind.sourceforge.net/wiki/index.php/File_fo
 or just use igraph package to plot a relationship plot
 
 Export codings to html.
-
-sort the f-cat and c-cat in the widget.
